# otomoto_parser

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
otomoto/: loaders.py  pipelines.py  settings.py
otomoto/spiders/: passat_spider.py
